# Aegis-USE

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
aegis-attest/: Cargo.toml
aegis-attest/src/: attestation.rs  key.rs  lib.rs  set.rs
aegis-crypto/: Cargo.toml
aegis-crypto/src/: generators.rs  h2c.rs  keynote.rs  lib.rs  mint.rs  note.rs  note_encryption.rs  nullifier.rs  payment.rs  poseidon.rs  spend.rs  tree.rs
aegis-node/: Cargo.toml
aegis-node/src/: anchor_watch.rs  api.rs  attest.rs  auxpow.rs  block.rs  chain.rs  daa.rs  ergo_follow.rs  explorer.html  fresh_sync.rs  genesis.rs  lib.rs  main.rs  mempool.rs  mm_forkchoice.rs  node.rs  pegmint.rs  pegmint_steps.rs  proof.rs  seed.rs  state.rs  store.rs  tx.rs
aegis-node/src/hn/: api.rs  auxpow.rs  chain.rs  header.rs  http_client.rs  mint.rs  mod.rs  params.rs  pegin_watch.rs  state.rs
aegis-node/tests/: anchor_watch_pipeline.rs  auxpow_real_extension_oracle.rs  ergo_follow_live_rest.rs  fresh_sync_replay_equivalence.rs  hn_e2e.rs  hn_http_e2e.rs  hn_multinode_e2e.rs  hn_peg_e2e.rs  node_runner_merge_mining.rs  pegmint_full_ok_real_testnet.rs  pegmint_real_proof_e2e.rs  pegmint_steps_real_inclusion_e2e.rs
aegis-spec/: Cargo.toml
aegis-spec/src/: lib.rs
aegis-types/: Cargo.toml
aegis-types/src/: block.rs  header.rs  lib.rs  tx.rs
aegis-wallet/: Cargo.toml
aegis-wallet/src/: address.rs  client.rs  keys.rs  keystore.rs  lib.rs  main.rs  notes.rs  pay.rs  send.rs  state.rs
aegis-wallet/tests/: node_client.rs
bridge-tools/: Cargo.toml
bridge-tools/src/: devnet.rs  hn.rs  lib.rs  main.rs  txbuild.rs  vault.rs  vault_epoch.rs
bridge-tools/tests/: epoch_vault_predicate.rs  epoch_vault_real_receipt.rs  vault_predicate.rs
contracts/: Cargo.toml
contracts/es/: AttestRegistry.es  DepositReceipt.es  SideChainState.es
contracts/src/: lib.rs
contracts/tests/: peg_contracts.rs
dev-docs/sidechain/: CONSOLIDATION.md  DEFERRED.md  HARDENING.md  README.md  SESSION-HANDOFF.md  adr-hash-native-engine.md  aegis-spec.md  architecture.md  attester-infra.md  batch-settlement-design.md  consensus.md  eip0045-migration.md  engineering.md  epoch-validity-design.md  epoch-validity-f1-f3-design.md  ergo-integration.md  external-review-brief.md  g15-proving-spike.md  g16-adversarial-review.md  g25-pegmint-packaging.md  g25-spv-reuse-spike.md  hash-native-engine-design.md  hash-native-spend-circuit.md  merge-mining.md  n1-crosscycle-tractability.md  n1-nullifier-fix-design.md  n1-redesign-hash-nullifier.md  node-api.md  note-protocol.md  p2p.md  params.md  payment-primitive-design.md  peg-spv-design.md  peg.md  privacy.md  prover-speed-plan.md  recursion-feasibility.md  risc0-bump-plan.md  s1c-attester-unlock.md  security-appendix.md  (+9 more)
dev-docs/sidechain/contracts/: DESIGN.md  DoubleRedeem.es  FeePot.es  GAPS.md  PegVault.es  UnlockIntent.es
dev-docs/sidechain/notes/archive/: 2026-07-11-privacy-mm-sidechain-design.md  2026-07-11-private-use-cash-sidechain.md  DESIGN-INDEX.md  README.md  adversarial-review.md  architecture-improvement.md  design-mitigations.md  fee-privacy-alternatives.md  fees-emissions.md  (+13 more)
dev-docs/sidechain/spike-results/: hash-native-client-cost-spike.md  option-a-settlement-curve-trees.md  option-b-settlement-hash-native.md  risc0-verifier-port-spike.md
engine/: Cargo.toml
engine/recursion/: Cargo.toml  README.md
engine/recursion/src/: digest.rs  digest_agg.rs  lib.rs
engine/recursion/tests/: agg_params_pin.rs  aggregate.rs  digest_channel.rs  dump_artifacts.rs  dump_epoch.rs  settlement_channel.rs  settlement_measure.rs  sponge_parity.rs  surface_publics.rs
engine/src/: address.rs  burn.rs  commit.rs  config.rs  lib.rs  merkle.rs  mint.rs  note_encryption.rs  nullifier.rs  poseidon.rs  settled.rs  settlement_digest.rs
engine/src/epoch/: anchor.rs  aux_wire.rs  batch_merkle.rs  daa.rs  digest.rs  header_id.rs  mod.rs  pegin.rs  share.rs  testgen.rs  types.rs  verify.rs  wire.rs
engine/src/spend/: baked_vk.rs  balance_air.rs  batch.rs  merkle_air.rs  mod.rs  monolith.rs  nullifier_air.rs  perm.rs
engine/tests/: epoch_validity.rs
engine/wallet/: Cargo.toml
engine/wallet/src/: chain.rs  circuit.rs  keystore.rs  lib.rs  wallet.rs
engine/wallet/tests/: e2e.rs
scripts/: build-all-hn.sh
settlement/: Cargo.toml  EPOCH_IMAGE_ID.hex  IMAGE_ID.hex  rust-toolchain.toml
settlement/exec-epoch/: Cargo.toml
settlement/exec-epoch/src/: main.rs
settlement/exec-i4/: Cargo.toml
settlement/exec-i4/src/: main.rs
settlement/host/: Cargo.toml
settlement/host/src/: main.rs
settlement/methods/: Cargo.toml  build.rs
settlement/methods/guest-epoch/: Cargo.toml
settlement/methods/guest-epoch/src/: main.rs
settlement/methods/guest-settlement/: Cargo.toml
settlement/methods/guest-settlement/src/: main.rs
test-vectors/aegis/generators/: v1.json
test-vectors/aegis/tools/: aegis_h2c_reference.py
test-vectors/testnet/blocks/: scala_block_442815.json  scala_proof_for_tx_442815.json
test-vectors/testnet/nipopow/: proof_m6_k10.json  scala_headers_442813_442815.json
test-vectors/testnet/peg/: DepositReceipt.injected.es  PegVault.injected.es  README.md  consolidation_tx.json  consolidation_tx_as_broadcast.json  deposit_receipt_tree.hex  lock1_tx.json  lock2_tx.json  mint_tuse_tx.json  mint_vault_nft_tx.json  peg_vault_tree.hex  vault_deploy_tx.json
test-vectors/testnet/peg-inclusion/: proof_m6_k10.json  scala_block_443396.json  scala_block_443406.json  scala_headers_443396_443655.json  scala_proof_for_cons_443406.json  scala_proof_for_lock_443396.json
test-vectors/testnet/peg-v2/: DepositReceipt.injected.es  PegVault.injected.es  README.md  consolidation_tx.json  consolidation_tx_as_broadcast.json  deposit_receipt_tree.hex  lock_tx.json  mint_vault_nft_tx.json  peg_vault_tree.hex  vault_deploy_tx.json
test-vectors/testnet/peg-v3/: DepositReceipt.injected.es  PegVault.injected.es  README.md  consolidation_tx.json  consolidation_tx_as_broadcast.json  deposit_receipt_tree.hex  lock_tx.json  mint_tuse_tx.json  mint_vault_nft_tx.json  peg_vault_tree.hex  vault_deploy_tx.json
