[package]
name        = "aegis-attest"
description = "Aegis attester federation: k-of-n secp256k1 attestation signing + verification. The shared identity/signing substrate for the bridge peg-out (U1-strong S1) and R1-T aggregate posting. No consensus, no I/O."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish     = false

[dependencies]
k256      = { workspace = true }
sha2      = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
hex  = { workspace = true }
