[package]
name        = "aegis-node"
description = "Aegis sidechain node library: header model, genesis, difficulty (LWMA). Consensus per dev-docs/sidechain/consensus.md."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish     = false

[dependencies]
aegis-crypto    = { path = "../aegis-crypto" }
aegis-spec      = { path = "../aegis-spec" }
aegis-types     = { path = "../aegis-types" }
# --- hash-native shielded pool (feat/hash-native-payment-engine integration).
#     Path deps into the isolated engine/ workspace (kept a separate workspace;
#     these are path dependencies, not members) тАФ this pulls Plonky3 into the
#     node build for in-field proof verification. ---
aegis-engine    = { path = "../engine" }
aegis-hn-wallet = { path = "../engine/wallet" }
postcard        = { version = "1", features = ["alloc"] }
serde           = { version = "1", features = ["derive"] }
# p3-field is only used for the `PrimeField32` / `PrimeCharacteristicRing`
# traits over the engine's `F` (BabyBear). It MUST resolve to the same p3 the
# engine links, else the trait bounds on `F` are unsatisfied. The recursion
# stack pinned the engine to crates.io p3 =0.6.1 (I1), so pin this to match тАФ
# a single p3-field 0.6.1 across the whole root workspace.
p3-field        = "=0.6.1"
ark-ec          = { workspace = true }
ark-serialize   = { workspace = true }
ergo-primitives = { workspace = true }
ergo-crypto     = { workspace = true }
ergo-ser        = { workspace = true }
ergo-validation = { workspace = true }
hex             = { workspace = true }
num-bigint      = { workspace = true }
rand            = { workspace = true }
thiserror       = { workspace = true }

clap               = { workspace = true, features = ["derive"] }
tokio              = { workspace = true, features = ["rt", "macros", "time", "signal"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Live Ergo header feed (`ergo_follow::poll_http`): node REST JSON тЖТ
# consensus `Header` decode + the blocking HTTP transport behind the
# sync `HeaderSource` trait (the tokio main loop wraps `drive` in
# `spawn_blocking` when it wires this in). `blocking` only тАФ the
# follower talks plain HTTP to a local node, no TLS stack needed.
ergo-rest-json = { workspace = true }
reqwest        = { workspace = true, features = ["blocking"] }
serde_json     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# The shared wire-type fixture (`aegis_types::tx::testutil::sample_transfer`)
# that state/chain/seed/store/mm-forkchoice tests build blocks from.
aegis-types = { path = "../aegis-types", features = ["testutil"] }
