[package]
name = "aegis-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

# A STANDALONE wallet — deliberately NOT linked into aegis-node. Spending keys
# must never live in a network-exposed process; the wallet talks to the node
# only over its read-only HTTP API. See dev-docs/sidechain/wallet-design.md.
#
# Slice 1 (this crate so far): the key hierarchy + diversified addresses. No
# note-encryption, no proving, no network — those slices are held under the
# freeze-hold. Key DERIVATIONS here are wallet-local (not consensus) and marked
# v1/provisional pending a ZIP-32-style spec + external review.

[dependencies]
aegis-crypto = { path = "../aegis-crypto" }
aegis-spec   = { path = "../aegis-spec" }
# Wire types + codecs only — NOT the node binary. The wallet decodes
# blocks and builds transfers without linking the node's network stack
# (the whole point of a standalone, key-isolated wallet).
aegis-types  = { path = "../aegis-types" }

ark-ec        = { workspace = true }
ark-ff        = { workspace = true }
ark-serialize = { workspace = true }
ark-secp256k1 = { workspace = true }
ark-secq256k1 = { workspace = true }

ergo-crypto = { workspace = true }
bech32      = "0.9"
hex         = { workspace = true }
# Encrypted keystore: PBKDF2-HMAC-SHA256 (passphrase → key) + AES-256-GCM.
aes-gcm     = { workspace = true }
pbkdf2      = { workspace = true }
sha2        = { workspace = true }
rand        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
clap        = { workspace = true, features = ["derive"] }

# The node seam is its read-only HTTP API. Blocking on purpose — the
# wallet is a simple CLI, not an async service (mirrors the node's own
# `ergo_follow`/`seed` blocking-reqwest transport).
reqwest    = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }

[dev-dependencies]
# Integration tests drive a REAL node + its loopback HTTP API (ApiServer,
# Chain, SeedCore) — a dev-dependency only, so the shipped wallet never
# links the node.
aegis-node    = { path = "../aegis-node" }
aegis-crypto  = { path = "../aegis-crypto" }
aegis-types   = { path = "../aegis-types" }
rand          = { workspace = true }
num-bigint    = { workspace = true }
ark-serialize = { workspace = true }
