# aegis-engine — the hash-native private-payment core (Option B).
#
# A from-scratch shielded-pool crypto core over BabyBear + Poseidon2, replacing
# the Curve-Trees/Bulletproofs (elliptic-curve) engine so that a client spend
# proof's verifier is FRI/hash-native — the precondition for cheap trustless
# settlement (see dev-docs/sidechain/hash-native-engine-design.md).
#
# This is a SEPARATE, nested workspace (excluded from the Aegis-USE root
# workspace, exactly like vendor/curve-trees). It does NOT perturb the main
# crates' dependency graph or Cargo.lock. Build it with an isolated
# CARGO_TARGET_DIR.
[workspace]

[package]
name        = "aegis-engine"
version     = "0.0.1"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Hash-native (BabyBear/Poseidon2/FRI) shielded-payment engine core for Aegis"
publish     = false

[dependencies]
# --- Plonky3, pinned to the exact rev the client-cost spike measured
#     (aegis-hashnative-spike/RESULTS.md). BabyBear is deliberate: it is the
#     RISC0 verifier's field, so a later settlement STARK re-verifies these
#     client proofs cheaply, in-field, with no foreign-curve MSM. ---
p3-field         = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-baby-bear     = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-poseidon2     = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-air           = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-matrix        = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-uni-stark     = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-commit        = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-challenger    = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-fri           = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-dft           = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-merkle-tree   = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-symmetric     = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }
p3-util          = { git = "https://github.com/Plonky3/Plonky3", rev = "4aed8fe4195d40305175d55e58690f46171258d9" }

rand = "0.9"

[dev-dependencies]
hex = "0.4"

# The FRI/STARK stack is unusably slow at opt-level 0; keep it optimized even in
# dev/test so the prove/verify tests run in seconds, not minutes (mirrors the
# root workspace's ark-* opt-level pins).
[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
