# aegis-engine — the hash-native private-payment core (Option B).
#
# A from-scratch shielded-pool crypto core over BabyBear + Poseidon2, replacing
# the Curve-Trees/Bulletproofs (elliptic-curve) engine so that a client spend
# proof's verifier is FRI/hash-native — the precondition for cheap trustless
# settlement (see dev-docs/sidechain/hash-native-engine-design.md).
#
# This is a SEPARATE, nested workspace (excluded from the Aegis-USE root
# workspace, exactly like vendor/curve-trees). It does NOT perturb the main
# crates' dependency graph or Cargo.lock. Build it with an isolated
# CARGO_TARGET_DIR.
[workspace]
members = ["wallet"]
# `recursion` is its own nested workspace (it path-depends on the unaudited
# Plonky3-recursion library); excluded so the engine gate never builds it.
exclude = ["recursion"]

[package]
name        = "aegis-engine"
version     = "0.0.1"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Hash-native (BabyBear/Poseidon2/FRI) shielded-payment engine core for Aegis"
publish     = false

[dependencies]
# --- Plonky3, pinned to the exact rev the client-cost spike measured
#     (aegis-hashnative-spike/RESULTS.md). BabyBear is deliberate: it is the
#     RISC0 verifier's field, so a later settlement STARK re-verifies these
#     client proofs cheaply, in-field, with no foreign-curve MSM. ---
p3-field         = "=0.6.1"
p3-baby-bear     = "=0.6.1"
p3-poseidon2     = "=0.6.1"
p3-poseidon2-air = "=0.6.1"
p3-air           = "=0.6.1"
p3-matrix        = "=0.6.1"
p3-uni-stark     = "=0.6.1"
# Single-instance batch-stark: the recursion-compatible client spend proof
# wrapper (`spend::batch`) — the aggregation pipeline's layer-1 input. The ZK
# uni-stark recursion entry point is broken upstream; batch-stark is the tested
# route (recursion-feasibility.md §8.4).
p3-batch-stark   = "=0.6.1"
p3-commit        = "=0.6.1"
p3-challenger    = "=0.6.1"
p3-fri           = "=0.6.1"
p3-dft           = "=0.6.1"
p3-merkle-tree   = "=0.6.1"
p3-symmetric     = "=0.6.1"
# SHA-256 FRI-Merkle commitment hash (T2.1). Routes through `sha2`
# (`block_api::compress256`), which RISC0 patches to its SHA accelerator in the
# settlement guest (see settlement/methods/guest-settlement/Cargo.toml [patch]).
p3-sha256        = "=0.6.1"
p3-util          = "=0.6.1"

# rand 0.10 to match Plonky3's rand (the hiding PCS/MMCS take an `R: rand::Rng`);
# a mismatched rand major would fail the trait bound on the mask/salt RNG.
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "sys_rng", "thread_rng"] }
# ChaCha20 is the mask/salt RNG: a CSPRNG (the masks ARE the privacy) that is
# also `Clone` (the hiding MMCS requires it); rand's StdRng is not `Clone` in 0.10.
rand_chacha = { version = "0.10", default-features = false }

# --- note encryption / address (OFF-circuit wallet transport; proven crates
#     only per the crypto rule — the in-circuit no-EC rule is about FRI-native
#     verification cost and does not apply off-circuit; see the design doc) ---
x25519-dalek     = { version = "2", default-features = false, features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hkdf             = "0.12"
sha2             = { version = "0.10", default-features = false }
bech32           = "0.9"
serde            = { version = "1", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
hex = "0.4"
postcard = { version = "1", features = ["alloc"] }
# NOTE: the `p3-security` soundness-oracle dev-dep is dropped at crates.io p3
# 0.6.1 (not published there). The FRI-parameter soundness floor it guarded
# (config.rs) moves to the I5 params/soundness review — the hiding FRI constants
# are unchanged.

# The FRI/STARK stack is unusably slow at opt-level 0; keep it optimized even in
# dev/test so the prove/verify tests run in seconds, not minutes (mirrors the
# root workspace's ark-* opt-level pins).
[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
