# Driver for the FULL aux-PoW epoch-validity guest (v7 AEGISPV1): `execute`
# (M-E1 cycle measurement, no prove), `prove` (REAL succinct prove — writes the
# receipt shape the devnet verifyStark consumes), `image-id`, `verify`. Reads the
# artifact set dumped by aegis-recursion/tests/dump_epoch.rs.
#
# Build with AEGIS_EPOCH_AUXPOW=1 so `methods` embeds the aux-pow guest ELF.
# Build --features cuda (in the ~/apps/risc0-cuda container) for a GPU prove.
[package]
name = "exec-epoch"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
aegis-engine = { path = "../../engine", features = ["aux-pow"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

[features]
# GPU proving via the RISC0 CUDA backend (in-process LocalProver).
cuda = ["risc0-zkvm/cuda"]
